Swap out controlsfx for ikonli, add jlink support