@@ -2,10 +2,10 @@ plugins {
     id "java"
     id "application"
     id "org.openjfx.javafxplugin"        version "0.0.8"
-    //id "org.beryx.jlink"                 version "2.15.1"
+    id "org.beryx.jlink"                 version "2.17.4"
 }
 
-mainClassName = "com.greatwebguy.application.MobTime"
+mainClassName = "com.greatwebguy.application/com.greatwebguy.application.MobTime"
 
 repositories {
     mavenCentral()
@@ -13,14 +13,9 @@ repositories {
 }
 
 dependencies {
-    implementation ('org.controlsfx:controlsfx:11.0.1' ) {
-        exclude group: 'org.openjfx', module: 'javafx-fxml'
-        exclude group: 'org.openjfx', module: 'javafx-web'
-        exclude group: 'org.openjfx', module: 'javafx-media'
-    }
-//    runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:win"
-//    runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:linux"
-//    runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:mac"
+    implementation ('org.kordamp.ikonli:ikonli-core:11.3.5')
+    implementation ('org.kordamp.ikonli:ikonli-javafx:11.3.5')
+    implementation ('org.kordamp.ikonli:ikonli-fontawesome-pack:11.3.5')
 }
 
 sourceCompatibility = JavaVersion.VERSION_14
@@ -32,23 +27,8 @@ javafx {
 }
 
 
-
-applicationDefaultJvmArgs =  [
-    "--add-exports=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED"
-]
-//
-//jlink {
-//    imageZip.set(file("${buildDir}/distributions/${appPackaging}-${javafx.platform.classifier}.zip"))
-//    options.addAll(["--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages"])
-//    launcher {
-//        name = "${appLauncher}"
-//        jvmArgs = applicationDefaultJvmArgs
-//    }
-//}
-//
-//task dist {
-//    dependsOn clean, jlinkZip
-//    description "Calls clean and then jlinkZip [default]"
-//}
-//
-//defaultTasks "dist"
+jlink {
+    launcher {
+        name = "MobTime"
+    }
+}
